--- a/app/src/main/res/layout/info_consulta_marcada.xml
+++ b/app/src/main/res/layout/info_consulta_marcada.xml
@@ -28,23 +28,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="2dp"
                 android:fontFamily="@font/roboto_light"
                 android:textColor="@color/corPrincipal"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@id/txtHorarioFimConsulta"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/txtNomePacienteConsulta"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints"
                 tools:text="@sample/Consultas_Marcadas.json/Consultas/horarioInicio" />
 
             <TextView
                 android:id="@+id/txtHorarioFimConsulta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/roboto_light"
                 android:textColor="@color/corPrincipal"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/txtHorarioInicioConsulta"
-                app:layout_constraintTop_toBottomOf="@+id/txtHorarioInicioConsulta"
+                app:layout_constraintTop_toBottomOf="@id/txtHorarioInicioConsulta"
+                tools:ignore="MissingConstraints"
                 tools:text="@sample/Consultas_Marcadas.json/Consultas/horarioFim" />
 
             <TextView
