--- a/app/src/main/res/layout/activity_paciente.xml
+++ b/app/src/main/res/layout/activity_paciente.xml
@@ -18,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/custon_background"
-            app:tabTextColor="@color/corPrincipal" />
+            app:tabMode="scrollable"
+            app:tabGravity="fill"
+            app:tabTextColor="@color/colorLabel" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
