--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,19 @@
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="textAllCaps">false</item>
     </style>
+
+
+    <style name="RadioButton">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:buttonTint"></item>
+    </style>
+
+    android:layout_gravity="center"
+    android:layout_weight="0.5"
+    android:buttonTint="@color/corPrincipal"
+    android:gravity="center"
+    android:text="@string/sim"
+    android:textColor="@color/corPrincipal"
+
 </resources>
